force-app/main/default/objects/Messaging_Settings__mdt/Messaging_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuración no secreta y referencias de los canales de mensajería de Dash.</description>
    <label>Messaging Setting</label>
    <pluralLabel>Messaging Settings</pluralLabel>
</CustomObject>