force-app/main/default/objects/Messaging_Settings__mdt/fields/Auto_Create_Leads__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Leads</label>
    <type>Checkbox</type>
</CustomField>