force-app/main/default/objects/Messaging_Settings__mdt/fields/Default_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Subject__c</fullName>
    <label>Default Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>