force-app/main/default/objects/Messaging_Settings__mdt/fields/Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Email_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Enabled</label>
    <type>Checkbox</type>
</CustomField>