force-app/main/default/objects/Messaging_Settings__mdt/fields/Email_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_Address__c</fullName>
    <label>Email Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>