force-app/main/default/objects/Messaging_Settings__mdt/fields/Require_Webhook_Signature__c.field-meta.xml
<CustomField>
    <fullName>Require_Webhook_Signature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Webhook Signature</label>
    <type>Checkbox</type>
</CustomField>