force-app/main/default/objects/Messaging_Settings__mdt/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <label>Twilio Account SID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>