force-app/main/default/objects/Messaging_Settings__mdt/fields/Twilio_Default_Content_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Default_Content_SID__c</fullName>
    <label>Twilio Default Content SID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>