force-app/main/default/objects/Messaging_Settings__mdt/fields/Twilio_Webhook_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Webhook_Public_URL__c</fullName>
    <description>Public URL Twilio will POST to. Must match exactly what is configured in Twilio console for signature validation to pass. Default: https://orgfarm-30c191d40a-dev-ed.develop.my.salesforce-sites.com/services/apexrest/messaging/twilio/</description>
    <label>Twilio Webhook Public URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>