force-app/main/default/objects/Messaging_Settings__mdt/fields/WhatsApp_Enabled__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Enabled</label>
    <type>Checkbox</type>
</CustomField>