force-app/main/default/objects/Messaging_Settings__mdt/fields/WhatsApp_Graph_Version__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Graph_Version__c</fullName>
    <label>WhatsApp Graph Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>