force-app/main/default/objects/Messaging_Settings__mdt/fields/WhatsApp_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Named_Credential__c</fullName>
    <label>WhatsApp Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>