force-app/main/default/objects/Messaging_Settings__mdt/fields/WhatsApp_Phone_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Phone_Number_ID__c</fullName>
    <label>WhatsApp Phone Number ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>