force-app/main/default/objects/Messaging_Settings__mdt/fields/WhatsApp_Provider__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Provider__c</fullName>
    <defaultValue>"Twilio"</defaultValue>
    <label>WhatsApp Provider</label>
    <length>16</length>
    <type>Text</type>
</CustomField>